[gd_scene load_steps=4 format=3 uid="uid://bu4tem7cr1nxp"]

[ext_resource type="Script" uid="uid://jpff6ljg7cwf" path="res://scripts/main_game.gd" id="1_s3esy"]
[ext_resource type="PackedScene" uid="uid://c8lbyd37wrgdv" path="res://scenes/player.tscn" id="2_72e8q"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_72e8q"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_s3esy")

[node name="background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="background"]
offset_right = 480.0
offset_bottom = 800.0
color = Color(0.484764, 0.886497, 0.974776, 1)

[node name="player" parent="." instance=ExtResource("2_72e8q")]
unique_name_in_owner = true
position = Vector2(240, 400)

[node name="worldBorder" type="Area2D" parent="."]

[node name="bottomBorder" type="CollisionShape2D" parent="worldBorder"]
position = Vector2(0, 840)
shape = SubResource("WorldBoundaryShape2D_72e8q")

[node name="mainLabel" type="Label" parent="."]
offset_left = 140.0
offset_top = 375.0
offset_right = 340.0
offset_bottom = 425.0
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="debugLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "test"
horizontal_alignment = 1

[node name="pipeSpawnTimer" type="Timer" parent="."]

[connection signal="body_entered" from="worldBorder" to="." method="_on_world_border_body_entered"]
[connection signal="timeout" from="pipeSpawnTimer" to="." method="_on_pipe_spawn_timer_timeout"]
